feat: 메인 페이지 SSR로 변경

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "csv-parse": "^5.5.3",
+    "csv-parser": "^3.0.0",
     "framer-motion": "^10.16.16",
     "next": "13.5.6",
     "react": "^18",
