--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "framer-motion": "^10.16.16",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18",
-    "swiper": "^11.0.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
