--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "csv-parse": "^5.5.3",
     "csv-parser": "^3.0.0",
     "framer-motion": "^10.16.16",
-    "next": "13.5.6",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18"
   },
