--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -8,6 +8,7 @@
     "noEmit": false,
     "esModuleInterop": true,
     "module": "commonjs",
+    "moduleDetection": "force",
     "rootDir": "./src",
     "outDir": "./dist",
     "moduleResolution": "node",
