--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.6",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
