--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.6",
     "@types/passport": "^1.0.16",
