--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -25,6 +25,6 @@
       }
     ]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types.d.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
